<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>

    <string name="app_header">My Nanodegree Apps!</string>
    <string name="button_spotify">Popular Movies</string>
    <string name="button_super">Stock Hawk!</string>
    <string name="button_buildit">Build it bigger</string>
    <string name="button_xyz">Make Your App Material</string>
    <string name="button_capstone">Capstone</string>
</resources>
